content/stylesheets/_layout/_default.scss
@mixin layout-default {

  header {
    margin-top: 48px;
    margin-bottom: 68px;

    .logo {
      max-width: 120%;
      margin: 0;
    }

    .site-title, .site-subtitle {
      display: none;
    }
  }

  #main {
    .menu {
      margin-bottom: 48px;
      nav {
        padding-left: 47px;
        a {
          display: block;
          font-weight: bold;
          &:hover, &.current {
            background-image: image_url('triangle.png');
            background-repeat: no-repeat;
            background-position: left center;
          }
        }
        a.level1 {
          @include link-colors($menu-text-color, $link-hover-color);
          margin-top: 24px;
          &:first-child {
            margin-top: 0;
          }
          &:hover, &.current {
            margin-left: -16px;
            padding-left: 16px;
          }
        }
        a.level2 {
          @include link-colors($submenu-text-color, $link-hover-color);
          margin-left: 24px;
          &:hover, &.current {
            margin-left: 8px;
            padding-left: 16px;
          }
        }
      }
    }

    .content a {
      @include hover-link;
    }

    .sidebar {
      color: $sidebar-text-color;
      a {
        @include hover-link;
        @include link-colors($sidebar-text-color, $link-hover-color);
      }
      .portrait {
        @include border-radius(3px);
        margin-bottom: 10px;
      }
    }

    .toplink {
      float: right;
      margin-left: 24px;
      @include link-colors($toplink-text-color);
      @include hover-link;
    }
  }

  footer {
    font-size: 90%;
    padding-top: 24px;
    color: $footer-text-color;
    .site-info > p {
      float: left;
      margin-bottom: 0;
      .copyright {
        margin-right: 10px;
      }
    }
    nav {
      float: left;
      margin-left: 0.4em;
      margin-bottom: 24px;
      a {
        @include link-colors($footer-text-color, $footer-text-color);
        @include hover-link;
        margin: 0 10px;
      }
    }
  }
}

